--- a/src/Components/SessionDetails/SessionDetails.module.css
+++ b/src/Components/SessionDetails/SessionDetails.module.css
@@ -48,3 +48,9 @@
     overflow: hidden;
     transition: all 200ms;
 }
+
+@media(max-width:600px) {
+    .SessionMainDiv {
+        margin-bottom: 10px;
+    }
+}
