--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -1,4 +1,4 @@
-.MainConatiner{
+.MainConatiner {
     bottom: 0;
     right: 0;
     left: 0;
@@ -13,6 +13,7 @@
     box-sizing: border-box;
     margin: auto 0 0 0;
 }
+
 .MainConatiner>div {
     width: 25%;
     box-sizing: border-box;
@@ -52,33 +53,33 @@
 }
 
 .footerHead {
-    color: hsla(0,0%,100%,.5);
+    color: hsla(0, 0%, 100%, .5);
     margin: 1em 0 1em 0;
     text-transform: uppercase;
     font-weight: 700;
     font-size: 18px;
 }
 
-.contactDiv{
+.contactDiv {
     padding-top: 10px;
-    
 }
-.socialIcon{
+
+.socialIcon {
     display: flex;
     align-items: center;
-    padding-top:12px ;
+    padding-top: 12px;
 }
-.copyrightText{
-    font-size: 14px;  
-    padding-top: 10px;
-    }
 
-.IconImage{
+.copyrightText {
+    font-size: 14px;
+    padding-top: 10px;
+}
+
+.IconImage {
     height: 20px;
     margin-left: 4px;
     margin-right: 12px;
 }
-
 
 .ContactIcon {
     vertical-align: middle;
@@ -90,15 +91,6 @@
 
 @media(max-width: 950px) {
     .MainConatiner {
-.ContactIcon{
-    vertical-align: middle;
-    border-style: none;
-    width :22px;
-    padding-right:8px;
-    height: 20px;
-}
-@media(max-width: 950px){
-    .MainConatiner{
         flex-direction: column;
         padding: 30px 100px;
         font-size: 14px;
@@ -109,4 +101,3 @@
         width: 90%;
     }
 }
-
