--- a/src/Components/CardSection/CardSection.module.css
+++ b/src/Components/CardSection/CardSection.module.css
@@ -1,44 +1,44 @@
-.CourseCard{
+.CourseCard {
     margin: 1%;
     width: 280px;
     height: 300px;
     border-radius: 10px;
     box-shadow: 0 0 10px #ccc;
-    color: rgba(0,0,0,0.8);
+    color: rgba(0, 0, 0, 0.8);
     overflow: hidden;
     margin-bottom: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     transition: transform .7s;
+    background-color: #fff;
 }
 
-.Thumbnail>img{
+.Thumbnail>img {
     width: 100%;
 }
 
-.CourseData{
-    color: rgba(0,0,0,0.8);
+.CourseData {
+    color: rgba(0, 0, 0, 0.8);
     padding: 1rem;
 }
 
-.CourseName{
+.CourseName {
     font-size: 16px;
     font-weight: 500;
     letter-spacing: 0.5px;
-    
 }
 
-@media(max-width:600px){
-    .CourseCard{
+@media(max-width:600px) {
+    .CourseCard {
         margin-bottom: 30px;
     }
 }
 
-.CourseUnits{
+.CourseUnits {
     font-size: 14px;
     font-weight: 500;
-    color: rgba(0,155,255,0.7);
+    color: rgba(0, 155, 255, 0.7);
     letter-spacing: 0.5px;
     padding: 0;
     margin-top: 24px;
