--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -1,6 +1,4 @@
-
-.MainConatiner{
-
+.MainConatiner {
     bottom: 0;
     right: 0;
     left: 0;
@@ -16,19 +14,21 @@
     margin: auto 0 0 0;
 }
 
-.MainConatiner > div{
+.MainConatiner>div {
     width: 25%;
     box-sizing: border-box;
-    vertical-align: middle	;
+    vertical-align: middle;
 }
+
 .footerHead {
-    color: hsla(0,0%,100%,.5);
+    color: hsla(0, 0%, 100%, .5);
     margin: 1em 0 1em 0;
     text-transform: uppercase;
     font-weight: 700;
     font-size: 18px;
 }
-.MainConatiner p{
+
+.MainConatiner p {
     margin: 5px 0 5px 0;
     margin-bottom: 5px;
     color: white;
@@ -36,19 +36,21 @@
     font-size: 13px;
     padding: 4px 0;
 }
-.contactDiv{
+
+.contactDiv {
     padding-top: 10px;
-    
 }
-.socialIcon{
+
+.socialIcon {
     display: flex;
     align-items: center;
-    padding-top:12px ;
+    padding-top: 12px;
 }
-.copyrightText{
-    font-size: 14px;  
+
+.copyrightText {
+    font-size: 14px;
     padding-top: 10px;
-    }
+}
 
 .MainConatiner>div {
     width: 25%;
@@ -112,22 +114,10 @@
 }
 
 .IconImage {
-
     height: 20px;
     margin-left: 4px;
     margin-right: 12px;
 }
-<<<<<<< HEAD
-.ContactIcon{
-    vertical-align: middle;
-    border-style: none;
-    width :22px;
-    padding-right:8px;
-    height: 20px;
-}
-@media(max-width: 950px){
-    .MainConatiner{
-
 
 .ContactIcon {
     vertical-align: middle;
@@ -143,18 +133,9 @@
         padding: 30px 100px;
         font-size: 14px;
         text-align: left;
-
-        margin:0
-    }
-    .MainConatiner > div {
-        width: 90%;
-    }   
-}
-
         margin: 0
     }
     .MainConatiner>div {
         width: 90%;
     }
 }
-
