--- a/src/Container/CourseInfoPage/CourseInfoPage.module.css
+++ b/src/Container/CourseInfoPage/CourseInfoPage.module.css
@@ -67,7 +67,8 @@
         box-sizing: border-box;
     }
     .courseImg {
-        margin-bottom: 20px;
+        margin: 30px;
+        width: 70px;
     }
 }
 
